# pico-logic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  logic.pio  pico_logic.c  pico_test.c  uncompress.py
notebooks/: serial_test.ipynb
